This is a step towards supporting multiple beacon reception and tracking. Definitely a work in progress ...

--- a/RocketTrackReceiver/data/lora_settings.html
+++ b/RocketTrackReceiver/data/lora_settings.html
@@ -118,11 +118,11 @@
                 </div>
                 <button class="menubuttons" formmethod="post">Apply</button>
             </form>
-            <form action="lora_defaults.html">
-                <td><button class="menubuttons">Restore Defaults</button></td>
+            <form action="/lora_defaults.html">
+                <button class="menubuttons" formmethod="post">Restore Defaults</button>
             </form>
-            <form action="configure.html">
-                <td><button class="menubuttons">Back</button></td>
+            <form action="/configure.html">
+                <button class="menubuttons">Back</button>
             </form>
         </center>
     </body>
