--- a/RocketTrackReceiver/data/index.html
+++ b/RocketTrackReceiver/data/index.html
@@ -1,28 +1,16 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="overall.css">
 	</head>
 	<body>
 		<h1>Rocket Track Receiver</h1>
 		<img id="logo" src="logo.jpg" alt="Cartoon Rocket Logo">
 		<table class="buttonsection">
-			<tr>
-				<td><form action="tracking.html"><button class="menubuttons" type="submit" formmethod="get">Tracking<br>Mode</button></form></td>
-				<td><form action="telemetry.html"><button class="menubuttons" type="submit" formmethod="get">Telemetry<br>Mode</button></form></td>
-			</tr>
-			<tr>
-				<!--
-				<td><form action="altitude.html"><button class="menubuttons" type="submit" formmethod="get">Altitude<br>Plot</button></form></td>
-				-->
-				<td><form action="status.html"><button class="menubuttons" type="submit" formmethod="get">Receiver<br>Status</button></form></td>
-				<!--
-				<td><form action="calibrate.html"><button class="menubuttons" type="submit" formmethod="get">Calibrate<br>IMU</button></form></td>
-				-->
-			</tr>
-			<tr>
-				<td><form action="configure.html"><button class="menubuttons" type="submit" formmethod="get">Configure<br>Receiver</button></form></td>
-				<td><form action="engineering.html"><button class="menubuttons" type="submit" formmethod="get">Engineering<br>Mode</button></form></td>
-			</tr>
+			<tr><td><form action="tracking.html"><button class="menubuttons" type="submit" formmethod="get">Tracking Mode</button></form></td></tr>
+			<tr><td><form action="telemetry.html"><button class="menubuttons" type="submit" formmethod="get">Telemetry Mode</button></form></td></tr>
+			<tr><td><form action="status.html"><button class="menubuttons" type="submit" formmethod="get">GPS Status</button></form></td></tr>
+			<tr><td><form action="configure.html"><button class="menubuttons" type="submit" formmethod="get">Configure Receiver</button></form></td></tr>
+			<tr><td><form action="engineering.html"><button class="menubuttons" type="submit" formmethod="get">Engineering Mode</button></form></td></tr>
 		</table>
 	</body>
 </html>
