This now has 10 beacon buffers and will allocate them based on incoming packets.  If a beacon has already been seen, new fixes will update that slot.  If a new beacon is seen, a slot will be allocated to it, or if all slots are already allocated, the one which has the oldest fix in it will be re-allocated.

--- a/RocketTrackReceiver/data/index.html
+++ b/RocketTrackReceiver/data/index.html
@@ -7,7 +7,7 @@
 		<img id="logo" src="logo.jpg" alt="Cartoon Rocket Logo">
 		<table class="buttonsection">
 			<tr><td><form action="tracking.html"><button class="menubuttons" type="submit" formmethod="get">Tracking Mode</button></form></td></tr>
-			<tr><td><form action="telemetry.html"><button class="menubuttons" type="submit" formmethod="get">Telemetry Mode</button></form></td></tr>
+			<tr><td><form action="select.html"><button class="menubuttons" type="submit" formmethod="get">Telemetry Mode</button></form></td></tr>
 			<tr><td><form action="status.html"><button class="menubuttons" type="submit" formmethod="get">GPS Status</button></form></td></tr>
 			<tr><td><form action="configure.html"><button class="menubuttons" type="submit" formmethod="get">Configure Receiver</button></form></td></tr>
 			<tr><td><form action="engineering.html"><button class="menubuttons" type="submit" formmethod="get">Engineering Mode</button></form></td></tr>
