This version allows the selection of a beacon to watch the detailed tracking for.  Needs more testing, especially on the accelerometer calibration.

--- a/RocketTrackReceiver/data/status.html
+++ b/RocketTrackReceiver/data/status.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="status.css">
+		<link rel="stylesheet" href="overall.css">
 		<script src="status.js"></script>
 		<meta http-equiv="refresh" content="1">
 	</head>
